INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${PATH_OPENVIBE}/include)
INCLUDE_DIRECTORIES(${PATH_OPENVIBE_TOOLKIT}/include)
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
ADD_EXECUTABLE(test_parse_formula-dynamic test_parse_formula.cpp)
TARGET_LINK_LIBRARIES(test_parse_formula-dynamic ${PROJECT_NAME}-dynamic)
TARGET_LINK_LIBRARIES(test_parse_formula-dynamic ${LIB_OPENVIBE})
TARGET_LINK_LIBRARIES(test_parse_formula-dynamic ${LIB_OPENVIBE_TOOLKIT})
